--- a/src/index.css
+++ b/src/index.css
@@ -180,7 +180,7 @@ textarea {
     display: block;
     max-width: 100%;
     border-radius: 0px 0px 182px 0px;
-    background: url("./assets/bg-portfolio.png")
+    background: url("./assets/portfolioo1.png")
 }
 
 .image-navi-studio-title-rate {
