--- a/src/index.css
+++ b/src/index.css
@@ -371,3 +371,13 @@ textarea {
         transform: scale(1);
     }
 }
+
+.animate-next {
+    transform: translateX(100%);
+    opacity: 0;
+}
+
+.animate-prev {
+    transform: translateX(-100%);
+    opacity: 0;
+}
