update my page dev

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ textarea {
 }
 
 .image-navi-studio-home {
-    background-image: url('./assets/bg-home-1.png');
+    background-image: url('./assets/bg-home.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
