--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,6 @@ select {
     background-color: #FFF6E4;
 }
 
-
 a,
 span,
 path,
@@ -66,17 +65,18 @@ textarea {
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+    width: 0;
+    height: 0;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: rgb(209 213 219);
+    width: 0;
+    height: 0;
 }
 
 ::-webkit-scrollbar-thumb {
-    border-bottom-left-radius: 20px;
-    background: #C22E2E;
+    width: 0;
+    height: 0;
 }
 
 .xs {
@@ -300,10 +300,6 @@ textarea {
     background-image: url("./assets/picture-bannier-louisa.png");
 }
 
-.testttt {
-    background-image: url("./assets/test113.png");
-}
-
 .picture-bannier-melissa {
     height: auto;
     display: block;
@@ -381,8 +377,6 @@ textarea {
         transform: scale(1);
     }
 }
-
-
 
 .picture-belgique {
     background-image: url("./assets/picture-belgique.png");
