--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body * {
 html,
 body {
     overflow-x: hidden;
+    background-color: #C22E2E;
     -webkit-tap-highlight-color: transparent;
     cursor: url('./Cursor/Cursor_1.svg'), default !important;
 }
