--- a/src/index.css
+++ b/src/index.css
@@ -252,7 +252,7 @@ textarea {
 .picture-bannier-louisa {
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("./assets/portfoliooo.png");
+    background-image: url("./assets/picture-bannier-louisa.png");
 }
 
 .picture-bannier-melissa {
