--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -10,6 +10,7 @@
 
 html,
 body {
+    overflow-x: hidden;
     -webkit-tap-highlight-color: transparent;
     cursor: url('../Cursor/Cursor_1.svg'), default !important;
 }
