--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -51,6 +51,12 @@ textarea {
     cursor: url('./Cursor/Cursor_3.svg'), text !important;
 }
 
+@media (prefers-reduced-motion) {
+    :root {
+        --scale: 0;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .parallax {
         background-attachment: scroll !important;
