--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -65,11 +65,14 @@ textarea {
     background-size: cover;
 }
 
-.image-navi-studio-home {
+.image-home {
     background-image: url('../assets/bg-home.png');
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
+
+
 
 .image-navi-studio-navbar-services {
     background-image: url('../assets/bg-home-services.png');
