--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -253,3 +253,37 @@ textarea {
         transform: scale(1);
     }
 }
+
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Apply animation with staggered delays */
+.fadeInDelay-1 {
+    animation: fadeIn 0.5s ease-in-out 0.1s forwards;
+}
+
+.fadeInDelay-2 {
+    animation: fadeIn 0.5s ease-in-out 0.2s forwards;
+}
+
+.fadeInDelay-3 {
+    animation: fadeIn 0.5s ease-in-out 0.3s forwards;
+}
+
+.fadeInDelay-4 {
+    animation: fadeIn 0.5s ease-in-out 0.4s forwards;
+}
+
+.fadeInDelay-5 {
+    animation: fadeIn 0.5s ease-in-out 0.4s forwards;
+}
