--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -266,6 +266,22 @@ textarea {
     }
 }
 
+@keyframes fadeInDelayDesktop {
+    from {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fadeInDelayDesktop {
+    animation: fadeInDelayDesktop 0.5s ease-in-out;
+}
+
 .fadeInDelay-1 {
     animation: fadeIn 0.5s ease-in-out 0.1s forwards;
 }
@@ -285,3 +301,12 @@ textarea {
 .fadeInDelay-5 {
     animation: fadeIn 0.5s ease-in-out 0.4s forwards;
 }
+
+
+/* .hteeest {
+    height: 688px;
+}
+
+.htee {
+    height: 563px;
+} */
