--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -14,6 +14,10 @@ body {
     cursor: url('./Cursor/Cursor_1.svg'), default !important;
 }
 
+body * {
+    @apply transition-colors duration-200;
+}
+
 ::-webkit-scrollbar {
     width: 0;
     height: 0;
@@ -134,20 +138,16 @@ textarea {
 
 .image-title-portfolio {
     border-radius: 0px 0px 182px 0px;
-    background-size: cover;
     background: lightgray;
 }
 
 .image-title-pricing {
-    background-repeat: no-repeat;
-    background-size: cover;
     border-radius: 0px 0px 154px 0px;
-    background-image: url("../assets/bg-rate.png");
+    background: url("../assets/bg-rate.png"), lightgray;
 }
 
 .image-title-pricing-uk {
     border-radius: 0px 0px 182px 0px;
-    background-size: cover;
     background: lightgray;
 }
 
