--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -9,6 +9,7 @@
 
 html,
 body {
+    overflow-x: hidden;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
