--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -91,6 +91,7 @@ textarea {
     background-image: url('../assets/bg-home-services.png');
     background-repeat: no-repeat;
     background-size: cover;
+    animation: fadeIn 1.5s ease-in-out;
 }
 
 .image-navi-studio-navbar-ethics {
@@ -100,6 +101,7 @@ textarea {
     height: auto;
     display: block;
     max-width: 100%;
+    animation: fadeIn 1.5s ease-in-out;
 }
 
 .bg-pattern-portfolio {
@@ -146,21 +148,25 @@ textarea {
 .image-title-quote {
     border-radius: 0px 0px 182px 0px;
     background: url("../assets/bg-devis.png");
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .image-title-portfolio {
     border-radius: 0px 0px 182px 0px;
     background: lightgray;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .image-title-pricing {
     border-radius: 0px 0px 154px 0px;
     background-image: url("../assets/bg-rate.png");
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .image-title-pricing-uk {
     border-radius: 0px 0px 182px 0px;
     background: lightgray;
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .image-title-contact {
@@ -192,10 +198,22 @@ textarea {
 
 .picture-bannier-louisa {
     background-image: url("../assets/picture-bannier-louisa.png");
+    animation: fadeIn 1.5s ease-in-out;
 }
 
 .picture-bannier-melissa {
     background-image: url("../assets/picture-bannier-melissa.png");
+    animation: fadeIn 1.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .p {
