update desc page dev

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -159,7 +159,7 @@ textarea {
 }
 
 .PictureBannierLouisa {
-    background-image: url("../assets/Picture/PictureBannierLouisa.png");
+    background-image: url("../assets/Picture/test.png");
     animation: FadeIn 1.5s ease-in-out;
 }
 
