--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -160,7 +160,7 @@ textarea {
 }
 
 .PictureBannierLouisa {
-    /* background: url("../assets/Picture/PictureBannierLouisa.png"); */
+    background-image: url("../assets/Picture/PictureBannierLouisa.png");
     animation: FadeIn 0.5s ease-in-out;
 }
 
