--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -266,11 +266,28 @@ textarea {
     }
 }
 
-@keyframes spin {
-    to {
-        transform: rotate(360deg);
-    }
+.swing {
+    animation: swing 2s ease infinite;
 }
-.animate-spin {
-    animation: spin 6s linear infinite;
+
+@keyframes swing {
+    20% {
+        transform: rotate(15deg);
+    }
+
+    40% {
+        transform: rotate(-10deg);
+    }
+
+    60% {
+        transform: rotate(5deg);
+    }
+
+    80% {
+        transform: rotate(-5deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
 }
