--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -174,7 +174,11 @@ textarea {
     animation: FadeIn 0.5s ease-in-out;
 }
 
-
+.BgSun {
+    width: 248px;
+    height: 230px;
+    background-image: url("../assets/Svg/BgSun.svg");
+}
 
 .FadeInDelayDesktop {
     animation: FadeInDelayDesktop 0.5s ease-in-out;
@@ -229,6 +233,40 @@ textarea {
 
     100% {
         transform: rotate(0);
+    }
+}
+
+.wobble {
+    animation: wobble 2s ease infinite;
+}
+
+@keyframes wobble {
+    0% {
+        transform: translateX(0%);
+    }
+
+    15% {
+        transform: translateX(-25%) rotate(-5deg);
+    }
+
+    30% {
+        transform: translateX(20%) rotate(3deg);
+    }
+
+    45% {
+        transform: translateX(-15%) rotate(-3deg);
+    }
+
+    60% {
+        transform: translateX(10%) rotate(2deg);
+    }
+
+    75% {
+        transform: translateX(-5%) rotate(-1deg);
+    }
+
+    100% {
+        transform: translateX(0%);
     }
 }
 
