--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -188,6 +188,16 @@ textarea {
     animation: Shake 0.5s ease-in-out;
 }
 
+.AnimationScrolling:first-child {
+    padding-right: 2em;
+    padding-left: 100%;
+    animation: scrolling-rtl 20s infinite linear;
+}
+
+.Swing {
+    animation: Swing 2s ease infinite;
+}
+
 @keyframes FadeIn {
     from {
         opacity: 0;
@@ -236,79 +246,7 @@ textarea {
     }
 }
 
-.wobble {
-    animation: wobble 2s ease infinite;
-}
-
-@keyframes wobble {
-    0% {
-        transform: translateX(0%);
-    }
-
-    15% {
-        transform: translateX(-25%) rotate(-5deg);
-    }
-
-    30% {
-        transform: translateX(20%) rotate(3deg);
-    }
-
-    45% {
-        transform: translateX(-15%) rotate(-3deg);
-    }
-
-    60% {
-        transform: translateX(10%) rotate(2deg);
-    }
-
-    75% {
-        transform: translateX(-5%) rotate(-1deg);
-    }
-
-    100% {
-        transform: translateX(0%);
-    }
-}
-
-.wobble {
-    animation: wobble 2s ease infinite;
-}
-
-@keyframes wobble {
-    0% {
-        transform: translateX(0%);
-    }
-
-    15% {
-        transform: translateX(-25%) rotate(-5deg);
-    }
-
-    30% {
-        transform: translateX(20%) rotate(3deg);
-    }
-
-    45% {
-        transform: translateX(-15%) rotate(-3deg);
-    }
-
-    60% {
-        transform: translateX(10%) rotate(2deg);
-    }
-
-    75% {
-        transform: translateX(-5%) rotate(-1deg);
-    }
-
-    100% {
-        transform: translateX(0%);
-    }
-}
-
-.swing {
-    animation: swing 2s ease infinite;
-}
-
-@keyframes swing {
+@keyframes Swing {
     20% {
         transform: rotate(15deg);
     }
@@ -327,5 +265,15 @@ textarea {
 
     100% {
         transform: rotate(0deg);
+    }
+}
+
+@keyframes scrolling-rtl {
+    0% {
+        transform: translate3d(0, 0, 0);
+    }
+
+    100% {
+        transform: translate3d(-100%, 0, 0);
     }
 }
