--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -169,6 +169,11 @@ textarea {
     animation: FadeIn 0.5s ease-in-out;
 }
 
+.BgSlidePortfolio {
+
+    background-image: url("../assets/Background/BgPortfolioSlide.png");
+}
+
 .MiniBannierMelissa {
     background-image: url("../assets/Picture/MiniBannierMelissa.png");
     animation: FadeIn 0.5s ease-in-out;
