update page portfolio and agin work

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -116,7 +116,7 @@ textarea {
 
 .BgTitlePortfolio {
     border-radius: 0px 0px 154px 0px;
-    background-image: url("../assets/Picture/PicturePortfolio.png");
+    background: url("../assets/Picture/PicturePortfolio.png"), lightgray;
     animation: FadeIn 0.5s ease-in-out;
 }
 
@@ -170,7 +170,6 @@ textarea {
 }
 
 .BgSlidePortfolio {
-
     background-image: url("../assets/Background/BgPortfolioSlide.png");
 }
 
