--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -71,8 +71,8 @@ textarea {
     font-family: 'Aoboshi One', serif;
 }
 
-.PictureBelgique {
-    background-image: url("../assets/Picture/PictureBelgique.png");
+.PictureLille {
+    background-image: url("../assets/Picture/PictureLille.png");
     border-radius: 0px 0px 154px 0px;
     animation: FadeIn 0.5s ease-in-out;
 }
