--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -112,7 +112,7 @@ textarea {
     animation: FadeIn 0.5s ease-in-out;
 }
 
-.BgValuesBlur {
+.BgDev {
     background-image: url('../assets/Background/BgContactBlur.png');
     animation: FadeIn 0.5s ease-in-out;
     border-radius: 0px 0px 154px 0px;
